--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "@reduxjs/toolkit": "^1.9.1",
     "@types/react-native-vector-icons": "^6.4.12",
     "expo": "~47.0.8",
+    "expo-camera": "~13.1.0",
     "expo-cli": "^6.0.8",
+    "expo-font": "~11.0.1",
+    "expo-image-picker": "~14.0.2",
     "expo-status-bar": "~1.4.2",
     "firebase": "^9.15.0",
     "react": "18.1.0",
