--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "expo-camera": "~13.1.0",
     "expo-cli": "^6.0.8",
     "expo-font": "~11.0.1",
+    "expo-image-manipulator": "~11.0.0",
     "expo-image-picker": "~14.0.2",
     "expo-status-bar": "~1.4.2",
     "firebase": "^9.15.0",
