--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@gorhom/bottom-sheet": "^4",
     "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-native-firebase/auth": "^16.5.0",
     "@react-navigation/bottom-tabs": "^6.5.1",
     "@react-navigation/material-bottom-tabs": "^6.2.10",
+    "@react-navigation/material-top-tabs": "^6.5.1",
     "@react-navigation/native": "^6.1.1",
     "@react-navigation/native-stack": "^6.9.6",
     "@reduxjs/toolkit": "^1.9.1",
@@ -29,20 +31,27 @@
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
     "react-native-dotenv": "^3.4.6",
+    "react-native-gesture-handler": "~2.8.0",
+    "react-native-pager-view": "6.0.1",
     "react-native-paper": "^5.1.0",
+    "react-native-reanimated": "~2.12.0",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
+    "react-native-tab-view": "^3.3.4",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.9",
+    "react-query": "^3.39.2",
     "react-redux": "^8.0.5",
     "redux": "^4.2.0",
-    "styled-components": "^5.3.6"
+    "styled-components": "^5.3.6",
+    "throttle-debounce": "^5.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@types/react": "~18.0.24",
     "@types/react-native": "~0.70.6",
     "@types/styled-components-react-native": "^5.2.0",
+    "@types/throttle-debounce": "^5.0.0",
     "typescript": "^4.6.3"
   },
   "private": true
