--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@gorhom/bottom-sheet": "^4",
+    "@legendapp/motion": "^2.2.0",
     "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-native-firebase/auth": "^16.5.0",
     "@react-navigation/bottom-tabs": "^6.5.1",
@@ -17,6 +18,7 @@
     "@react-navigation/material-top-tabs": "^6.5.1",
     "@react-navigation/native": "^6.1.1",
     "@react-navigation/native-stack": "^6.9.6",
+    "@react-navigation/stack": "^6.3.10",
     "@reduxjs/toolkit": "^1.9.1",
     "@types/react-native-vector-icons": "^6.4.12",
     "expo": "~47.0.8",
@@ -27,6 +29,7 @@
     "expo-image-picker": "~14.0.2",
     "expo-status-bar": "~1.4.2",
     "firebase": "^9.15.0",
+    "moment": "^2.29.4",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
