--- a/package.json
+++ b/package.json
@@ -35,14 +35,17 @@
     "react-native": "0.70.5",
     "react-native-dotenv": "^3.4.6",
     "react-native-gesture-handler": "~2.8.0",
+    "react-native-maps": "1.3.2",
     "react-native-pager-view": "6.0.1",
     "react-native-paper": "^5.1.0",
     "react-native-reanimated": "~2.12.0",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
+    "react-native-shared-element": "0.8.4",
     "react-native-tab-view": "^3.3.4",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.9",
+    "react-navigation-shared-element": "^3.1.3",
     "react-query": "^3.39.2",
     "react-redux": "^8.0.5",
     "redux": "^4.2.0",
