--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
   },
   "dependencies": {
     "@gorhom/bottom-sheet": "^4",
-    "@legendapp/motion": "^2.2.0",
     "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-native-firebase/auth": "^16.5.0",
     "@react-navigation/bottom-tabs": "^6.5.1",
@@ -34,6 +33,8 @@
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
     "react-native-dotenv": "^3.4.6",
+    "react-native-draggable-flatlist": "^4.0.0",
+    "react-native-draggable-grid": "^2.1.7",
     "react-native-gesture-handler": "~2.8.0",
     "react-native-maps": "1.3.2",
     "react-native-pager-view": "6.0.1",
