--- a/package.json
+++ b/package.json
@@ -13,8 +13,6 @@
     "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-native-firebase/auth": "^16.5.0",
     "@react-navigation/bottom-tabs": "^6.5.1",
-    "@react-navigation/material-bottom-tabs": "^6.2.10",
-    "@react-navigation/material-top-tabs": "^6.5.1",
     "@react-navigation/native": "^6.1.1",
     "@react-navigation/native-stack": "^6.9.6",
     "@react-navigation/stack": "^6.3.10",
@@ -26,12 +24,14 @@
     "expo-font": "~11.0.1",
     "expo-image-manipulator": "~11.0.0",
     "expo-image-picker": "~14.0.2",
+    "expo-media-library": "~15.0.0",
     "expo-status-bar": "~1.4.2",
     "firebase": "^9.15.0",
     "moment": "^2.29.4",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
+    "react-native-animatable": "^1.3.3",
     "react-native-dotenv": "^3.4.6",
     "react-native-draggable-flatlist": "^4.0.0",
     "react-native-draggable-grid": "^2.1.7",
@@ -49,7 +49,6 @@
     "react-navigation-shared-element": "^3.1.3",
     "react-query": "^3.39.2",
     "react-redux": "^8.0.5",
-    "redux": "^4.2.0",
     "styled-components": "^5.3.6",
     "throttle-debounce": "^5.0.0"
   },
