--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@gorhom/bottom-sheet": "^4",
     "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-native-firebase/auth": "^16.5.0",
+    "@react-native-seoul/masonry-list": "^1.4.1",
     "@react-navigation/bottom-tabs": "^6.5.1",
     "@react-navigation/native": "^6.1.1",
     "@react-navigation/native-stack": "^6.9.6",
@@ -19,14 +20,19 @@
     "@reduxjs/toolkit": "^1.9.1",
     "@types/react-native-vector-icons": "^6.4.12",
     "expo": "~47.0.8",
+    "expo-blur": "~12.0.1",
     "expo-camera": "~13.1.0",
     "expo-cli": "^6.0.8",
     "expo-font": "~11.0.1",
     "expo-image-manipulator": "~11.0.0",
     "expo-image-picker": "~14.0.2",
+    "expo-linear-gradient": "~12.0.1",
+    "expo-location": "~15.0.1",
     "expo-media-library": "~15.0.0",
+    "expo-sharing": "~11.0.1",
     "expo-status-bar": "~1.4.2",
     "firebase": "^9.15.0",
+    "lottie-react-native": "5.1.4",
     "moment": "^2.29.4",
     "react": "18.1.0",
     "react-dom": "18.1.0",
@@ -35,14 +41,17 @@
     "react-native-dotenv": "^3.4.6",
     "react-native-draggable-flatlist": "^4.0.0",
     "react-native-draggable-grid": "^2.1.7",
+    "react-native-fit-image": "^1.5.5",
     "react-native-gesture-handler": "~2.8.0",
     "react-native-maps": "1.3.2",
     "react-native-pager-view": "6.0.1",
     "react-native-paper": "^5.1.0",
+    "react-native-pell-rich-editor": "^1.8.8",
     "react-native-reanimated": "~2.12.0",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
     "react-native-shared-element": "0.8.4",
+    "react-native-svg": "13.4.0",
     "react-native-tab-view": "^3.3.4",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.9",
