--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "expo-sharing": "~11.0.1",
     "expo-status-bar": "~1.4.2",
     "firebase": "^9.15.0",
+    "geodist": "^0.2.1",
+    "geofirestore": "^5.2.0",
     "lottie-react-native": "5.1.4",
     "moment": "^2.29.4",
     "react": "18.1.0",
@@ -42,7 +44,9 @@
     "react-native-draggable-flatlist": "^4.0.0",
     "react-native-draggable-grid": "^2.1.7",
     "react-native-fit-image": "^1.5.5",
+    "react-native-geocoding": "^0.5.0",
     "react-native-gesture-handler": "~2.8.0",
+    "react-native-google-places-autocomplete": "^2.5.1",
     "react-native-maps": "1.3.2",
     "react-native-pager-view": "6.0.1",
     "react-native-paper": "^5.1.0",
