--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/native-stack": "^6.9.6",
     "@react-navigation/stack": "^6.3.10",
     "@reduxjs/toolkit": "^1.9.1",
+    "@types/react-native-scrollable-tab-view": "^0.10.3",
     "@types/react-native-vector-icons": "^6.4.12",
     "expo": "~47.0.8",
     "expo-blur": "~12.0.1",
@@ -54,6 +55,7 @@
     "react-native-reanimated": "~2.12.0",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
+    "react-native-scrollable-tab-view": "^1.0.0",
     "react-native-shared-element": "0.8.4",
     "react-native-svg": "13.4.0",
     "react-native-tab-view": "^3.3.4",
