--- a/package.json
+++ b/package.json
@@ -6,7 +6,14 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "test": "jest"
+  },
+  "jest": {
+    "preset": "jest-expo",
+    "transformIgnorePatterns": [
+      "node_modules/(?!((jest-)?react-native|@react-native(-community)?)|expo(nent)?|@expo(nent)?/.*|@expo-google-fonts/.*|react-navigation|@react-navigation/.*|@unimodules/.*|unimodules|sentry-expo|native-base|react-native-svg|firebase/auth/react-native|@firebase/auth/react-native)"
+    ]
   },
   "dependencies": {
     "@gorhom/bottom-sheet": "^4",
@@ -14,12 +21,15 @@
     "@react-native-firebase/auth": "^16.5.0",
     "@react-native-seoul/masonry-list": "^1.4.1",
     "@react-navigation/bottom-tabs": "^6.5.1",
+    "@react-navigation/drawer": "^6.5.7",
     "@react-navigation/native": "^6.1.1",
     "@react-navigation/native-stack": "^6.9.6",
     "@react-navigation/stack": "^6.3.10",
     "@reduxjs/toolkit": "^1.9.1",
+    "@types/jest": "^29.2.6",
     "@types/react-native-scrollable-tab-view": "^0.10.3",
     "@types/react-native-vector-icons": "^6.4.12",
+    "@types/react-test-renderer": "^18.0.0",
     "expo": "~47.0.8",
     "expo-blur": "~12.0.1",
     "expo-camera": "~13.1.0",
@@ -35,6 +45,8 @@
     "firebase": "^9.15.0",
     "geodist": "^0.2.1",
     "geofirestore": "^5.2.0",
+    "jest": "^26.6.3",
+    "jest-expo": "^47.0.1",
     "lottie-react-native": "5.1.4",
     "moment": "^2.29.4",
     "react": "18.1.0",
@@ -64,6 +76,7 @@
     "react-navigation-shared-element": "^3.1.3",
     "react-query": "^3.39.2",
     "react-redux": "^8.0.5",
+    "react-test-renderer": "18.1.0",
     "styled-components": "^5.3.6",
     "throttle-debounce": "^5.0.0"
   },
@@ -73,6 +86,7 @@
     "@types/react-native": "~0.70.6",
     "@types/styled-components-react-native": "^5.2.0",
     "@types/throttle-debounce": "^5.0.0",
+    "firestore-jest-mock": "^0.20.0",
     "typescript": "^4.6.3"
   },
   "private": true
