Working on the 360 camera view

--- a/app.json
+++ b/app.json
@@ -29,6 +29,12 @@
           "cameraPermission": "Allow $(PRODUCT_NAME) to access your camera",
           "savePhotosPermission": "Allow $(PRODUCT_NAME) to save photos."
         }
+      ],
+      [
+        "expo-camera",
+        {
+          "cameraPermission": "Allow $(PRODUCT_NAME) to access your camera."
+        }
       ]
     ],
     "android": {
