--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "react-native-dotenv": "^3.4.6",
     "react-native-draggable-flatlist": "^4.0.0",
     "react-native-draggable-grid": "^2.1.7",
+    "react-native-element-dropdown": "^2.8.2",
     "react-native-fit-image": "^1.5.5",
     "react-native-geocoding": "^0.5.0",
     "react-native-gesture-handler": "~2.8.0",
